solved gridpane resize problem, implemented schedule load from database

--- a/bin/Bundle_en.properties
+++ b/bin/Bundle_en.properties
@@ -9,9 +9,17 @@ DialogAddSchedule.Settings.Zerohouer = Zeroth Houer:
 DialogAddSchedule.TfHints.Comment    = Notice
 DialogAddSchedule.TfHints.Name       = Schedule name
 
-MainWindow.Schedulepage.ButtonAdd.Title = Add schedule
-MainWindow.Schedulepage.Header.Title    = Schedule
-MainWindow.Sidebar.Item.Homeworks.Title = Homework
-MainWindow.Sidebar.Item.Marks.Title     = Marks
-MainWindow.Sidebar.Item.Schedules.Title = Schedules
-MainWindow.Sidebar.Item.Settings.Title  = Settings
+MainWindow.Schedulepage.ButtonAdd.Title             = Add schedule
+MainWindow.Schedulepage.Footer.Combschedules.Noitem = No schedules found
+MainWindow.Schedulepage.Header.Title                = Schedule
+MainWindow.Schedulepage.Schedule.Days.Friday        = Friday
+MainWindow.Schedulepage.Schedule.Days.Monday        = Monday
+MainWindow.Schedulepage.Schedule.Days.Saturday      = Saturday
+MainWindow.Schedulepage.Schedule.Days.Sunday        = Sunday
+MainWindow.Schedulepage.Schedule.Days.Thursday      = Thursday
+MainWindow.Schedulepage.Schedule.Days.Tuesday       = Dienstag
+MainWindow.Schedulepage.Schedule.Days.Wednesday     = Wednesday
+MainWindow.Sidebar.Item.Homeworks.Title             = Homework
+MainWindow.Sidebar.Item.Marks.Title                 = Marks
+MainWindow.Sidebar.Item.Schedules.Title             = Schedules
+MainWindow.Sidebar.Item.Settings.Title              = Settings
