--- a/res/Bundle_de.properties
+++ b/res/Bundle_de.properties
@@ -9,9 +9,17 @@ DialogAddSchedule.Settings.Zerohouer = Nullte Stunde:
 DialogAddSchedule.TfHints.Comment    = Kommentar
 DialogAddSchedule.TfHints.Name       = Name des Stundenplans
 
-MainWindow.Schedulepage.ButtonAdd.Title = Neuer Stundenplan
-MainWindow.Schedulepage.Header.Title    = Stundenplan
-MainWindow.Sidebar.Item.Homeworks.Title = Hausaufgaben
-MainWindow.Sidebar.Item.Marks.Title     = Notenspiegel
-MainWindow.Sidebar.Item.Schedules.Title = Stundenplan
-MainWindow.Sidebar.Item.Settings.Title  = Einstellungen
+MainWindow.Schedulepage.ButtonAdd.Title             = Neuer Stundenplan
+MainWindow.Schedulepage.Footer.Combschedules.Noitem = Keine Stundenpl\u00E4ne gefunden
+MainWindow.Schedulepage.Header.Title                = Stundenplan
+MainWindow.Schedulepage.Schedule.Days.Friday        = Freitag
+MainWindow.Schedulepage.Schedule.Days.Monday        = Montag
+MainWindow.Schedulepage.Schedule.Days.Saturday      = Samstag
+MainWindow.Schedulepage.Schedule.Days.Sunday        = Sonntag
+MainWindow.Schedulepage.Schedule.Days.Thursday      = Donnerstag
+MainWindow.Schedulepage.Schedule.Days.Tuesday       = Dienstag
+MainWindow.Schedulepage.Schedule.Days.Wednesday     = Mittwoch
+MainWindow.Sidebar.Item.Homeworks.Title             = Hausaufgaben
+MainWindow.Sidebar.Item.Marks.Title                 = Notenspiegel
+MainWindow.Sidebar.Item.Schedules.Title             = Stundenplan
+MainWindow.Sidebar.Item.Settings.Title              = Einstellungen
