New Schedule Class, Package reorganisation, ERROR: Invalid subject color spec

--- a/bin/Bundle_de.properties
+++ b/bin/Bundle_de.properties
@@ -9,17 +9,25 @@ DialogAddSchedule.Settings.Zerohouer = Nullte Stunde:
 DialogAddSchedule.TfHints.Comment    = Kommentar
 DialogAddSchedule.TfHints.Name       = Name des Stundenplans
 
-MainWindow.Schedulepage.ButtonAdd.Title             = Neuer Stundenplan
-MainWindow.Schedulepage.Footer.Combschedules.Noitem = Keine Stundenpl\u00E4ne gefunden
-MainWindow.Schedulepage.Header.Title                = Stundenplan
-MainWindow.Schedulepage.Schedule.Days.Friday        = Freitag
-MainWindow.Schedulepage.Schedule.Days.Monday        = Montag
-MainWindow.Schedulepage.Schedule.Days.Saturday      = Samstag
-MainWindow.Schedulepage.Schedule.Days.Sunday        = Sonntag
-MainWindow.Schedulepage.Schedule.Days.Thursday      = Donnerstag
-MainWindow.Schedulepage.Schedule.Days.Tuesday       = Dienstag
-MainWindow.Schedulepage.Schedule.Days.Wednesday     = Mittwoch
-MainWindow.Sidebar.Item.Homeworks.Title             = Hausaufgaben
-MainWindow.Sidebar.Item.Marks.Title                 = Notenspiegel
-MainWindow.Sidebar.Item.Schedules.Title             = Stundenplan
-MainWindow.Sidebar.Item.Settings.Title              = Einstellungen
+DialogAddandEditSubjects.Buttons.Cancel                  = Abbrechen
+DialogAddandEditSubjects.Buttons.Ok                      = Ok
+DialogAddandEditSubjects.Content.Comb.New                = Fach hinzuf\u00FCgen
+DialogAddandEditSubjects.Content.Message.Overwrite.Text  = Durch klicken auf Ok werden alle \u00C4nderungen \u00FCbernommen. Dies kann nicht r\u00FCckga\u00E4nging gemacht werden.
+DialogAddandEditSubjects.Content.Message.Overwrite.Title = Dieses Fach existiert bereits!
+DialogAddandEditSubjects.Heuder.Title                    = F\u00E4cher hinzuf\u00FCgen und bearbeiten
+
+MainWindow.Schedulepage.ButtonAdd.Title                = Neuer Stundenplan
+MainWindow.Schedulepage.Footer.Combschedules.Noitem    = Keine Stundenpl\u00E4ne gefunden
+MainWindow.Schedulepage.Header.Title                   = Stundenplan
+MainWindow.Schedulepage.Schedule.Contextmenu.empty.new = Fach hinzuf\u00FCgen
+MainWindow.Schedulepage.Schedule.Days.Friday           = Freitag
+MainWindow.Schedulepage.Schedule.Days.Monday           = Montag
+MainWindow.Schedulepage.Schedule.Days.Saturday         = Samstag
+MainWindow.Schedulepage.Schedule.Days.Sunday           = Sonntag
+MainWindow.Schedulepage.Schedule.Days.Thursday         = Donnerstag
+MainWindow.Schedulepage.Schedule.Days.Tuesday          = Dienstag
+MainWindow.Schedulepage.Schedule.Days.Wednesday        = Mittwoch
+MainWindow.Sidebar.Item.Homeworks.Title                = Hausaufgaben
+MainWindow.Sidebar.Item.Marks.Title                    = Notenspiegel
+MainWindow.Sidebar.Item.Schedules.Title                = Stundenplan
+MainWindow.Sidebar.Item.Settings.Title                 = Einstellungen
