--- a/res/Bundle_en.properties
+++ b/res/Bundle_en.properties
@@ -9,17 +9,25 @@ DialogAddSchedule.Settings.Zerohouer = Zeroth Houer:
 DialogAddSchedule.TfHints.Comment    = Notice
 DialogAddSchedule.TfHints.Name       = Schedule name
 
-MainWindow.Schedulepage.ButtonAdd.Title             = Add schedule
-MainWindow.Schedulepage.Footer.Combschedules.Noitem = No schedules found
-MainWindow.Schedulepage.Header.Title                = Schedule
-MainWindow.Schedulepage.Schedule.Days.Friday        = Friday
-MainWindow.Schedulepage.Schedule.Days.Monday        = Monday
-MainWindow.Schedulepage.Schedule.Days.Saturday      = Saturday
-MainWindow.Schedulepage.Schedule.Days.Sunday        = Sunday
-MainWindow.Schedulepage.Schedule.Days.Thursday      = Thursday
-MainWindow.Schedulepage.Schedule.Days.Tuesday       = Dienstag
-MainWindow.Schedulepage.Schedule.Days.Wednesday     = Wednesday
-MainWindow.Sidebar.Item.Homeworks.Title             = Homework
-MainWindow.Sidebar.Item.Marks.Title                 = Marks
-MainWindow.Sidebar.Item.Schedules.Title             = Schedules
-MainWindow.Sidebar.Item.Settings.Title              = Settings
+DialogAddandEditSubjects.Buttons.Cancel                  = Cancel
+DialogAddandEditSubjects.Buttons.Ok                      = Ok
+DialogAddandEditSubjects.Content.Comb.New                = add subject
+DialogAddandEditSubjects.Content.Message.Overwrite.Text  = Should the subject be replaced?\r\nNote: This cannot be redone!
+DialogAddandEditSubjects.Content.Message.Overwrite.Title = This subject is existing!
+DialogAddandEditSubjects.Heuder.Title                    = Add and edit subjects
+
+MainWindow.Schedulepage.ButtonAdd.Title                = Add schedule
+MainWindow.Schedulepage.Footer.Combschedules.Noitem    = No schedules found
+MainWindow.Schedulepage.Header.Title                   = Schedule
+MainWindow.Schedulepage.Schedule.Contextmenu.empty.new = add subject
+MainWindow.Schedulepage.Schedule.Days.Friday           = Friday
+MainWindow.Schedulepage.Schedule.Days.Monday           = Monday
+MainWindow.Schedulepage.Schedule.Days.Saturday         = Saturday
+MainWindow.Schedulepage.Schedule.Days.Sunday           = Sunday
+MainWindow.Schedulepage.Schedule.Days.Thursday         = Thursday
+MainWindow.Schedulepage.Schedule.Days.Tuesday          = Dienstag
+MainWindow.Schedulepage.Schedule.Days.Wednesday        = Wednesday
+MainWindow.Sidebar.Item.Homeworks.Title                = Homework
+MainWindow.Sidebar.Item.Marks.Title                    = Marks
+MainWindow.Sidebar.Item.Schedules.Title                = Schedules
+MainWindow.Sidebar.Item.Settings.Title                 = Settings
